force-app/main/default/objects/Reservation__c/fields/Flat__c.field-meta.xml
<CustomField>
    <fullName>Flat__c</fullName>
    <label>Flat</label>
    <referenceTo>Flat__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>