force-app/main/default/objects/Reservation__c/fields/Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Months__c</fullName>
    <label>Tenure(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>